# Archiving_dublin_medadata

./: .gitignore  COMPLETE_BREAKDOWN.md  QUICK_START.md  README.md  REFACTORING_DOCUMENTATION.md  REFACTORING_SUMMARY.md  all-s3-links.txt  allitems.json  archive-data.js
api/: chat.js
backend/: .env.example  check_edges.py  pyproject.toml  requirements.txt
backend/data/processed/: archive_drawings.ttl  dublin_core_schema.json  image_graph.json  image_metadata.csv  region_connections.json
backend/src/archive_ai/: __init__.py  api_server.py  config.py  connection_builder.py  content_matcher.py  dublin_core.py  exporters.py  feature_extractor.py  io_loaders.py  pipeline.py  region_classifier.py  structured_metadata.py  text_extractor.py  types.py
backend/src/archive_ai_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/api/: chat.js
frontend/public/data/: clusters.json  image_graph.json  image_metadata.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: ChatWidget.jsx  ExtractedContentPanel.jsx  FiltersPanel.jsx  GraphView.jsx  GraphView2D.jsx  GraphView3D.jsx  ImageDetailModal.jsx  Legend.jsx  MetadataPanel.jsx
frontend/src/utils/: archiveNaming.js  backendApi.js  colorSystem.js  (+1 more)
schemas/: archival_drawing.ttl  clusters.schema.json  image_graph.schema.json  image_metadata.schema.json  region_connections.schema.json
scripts/: enrich_metadata.py  export_rdf.py  run_all.ps1  run_backend_api.ps1  run_enrich_metadata.ps1  run_frontend.ps1  run_pipeline.ps1
